# functions-as-processes-haskell

./: README.md  flake.nix  functions-as-processes-haskell.cabal  justfile
src/: Lambda.hs  Main.hs
